2002-08-04  Bastien Nocera  <hadess@hadess.net>

	* CVS_COMMITS: added
	* gnome-vfs-mime-magic: added magic for Apple's new .mp4 files

2002-08-02  Thomas Meeks  <thomas@imaginator.com>

	* gnome-vfs-mime-magic: Added image/x-dcm, x-sun-raster, x-sgi,
	x-pcx, x-dib, x-fits, x-fpx, x-icb, x-dpx

	* gnome-vfs.keys.in: Added appropiate file descriptions and viewers

	* gnome-vfs.mime: Added above extensions also added miff, gray,
	palm, and pict

2002-07-12  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in: Added MacBinaryII file types
	fix warning about the position of the vfolder-desktop mime-type in
	gnome-vfs.keys.in

2002-07-02  Peteris Krisjanis <pecisk@inbox.lv>

	* configure.in: (ALL_LINGUAS) added Latvian (lv) support.

2002-06-29  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.mime:

	Change extension for C++ headers from "hp" to "hpp".

2002-06-28  Damon Chaplin  <damon@ximian.com>

	* gnome-vfs.keys.in: changed default action for text/html to
	application. We're doing this as nautilus 2.0 doesn't have a decent
	html component and it currently displays it as ascii text (bad!).
	Unfortunately this change will also affect nautilus 1.4 users, who
	may prefer the mozilla component. They'll have to change their default
	view themselves. Fixes bug #81615. 

2002-06-26  Jakub Steiner <jimmac@ximian.com>

	* icons/Makefile.am: added i-web and i-network
	* icons/i-network.png: 
	* icons/i-web.png: hadess' request

2002-06-26  Bastien Nocera  <hadess@hadess.net>

	* icons/Makefile.am: added 2 files from ximian-south by jimmac
	* icons/i-ftp.png: added
	* icons/i-nfs.png: updated
	* icons/i-smb.png: added

2002-06-19  Jakub Steiner <jimmac@ximian.com>

	* icons/gnome-application-vnd.sun.xml.calc.png:
	* icons/gnome-application-vnd.sun.xml.impress.png:
	* icons/gnome-application-vnd.sun.xml.writer.png: update labels

2002-06-19  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.applications:
	* gnome-vfs.keys.in:
