@@ -408,21 +408,6 @@ image/bmp
 image/cgm
 	ext: cgm
 
-image/x-dcm
-	ext: dcm
-
-image/x-fits
-	ext: fits
-
-image/x-sgi
-	ext: sgi
-
-image/x-icb
-	ext: icb
-
-image/x-sun-raster
-	ext: sun
-
 image/gif
 	ext: gif
 
@@ -463,8 +448,20 @@ image/x-compressed-xcf
 	regex,2: \.xcf\.gz$
 	regex,2: \.xcf\.bz2$
 
+image/x-dcm
+	ext: dcm
+
 image/x-emf
 	ext: emf
+
+image/x-fits
+	ext: fits
+
+image/x-gray
+	ext: gray
+
+image/x-icb
+	ext: icb
 
 image/x-ico
 	ext: ico
@@ -481,17 +478,14 @@ image/x-lwo
 image/x-lws
 	ext: lws
 
-image/x-pcx
-	ext: pcx
-
 image/x-miff
 	ext: miff
 
-image/x-gray
-	ext: gray
-
 image/x-palm
 	ext: palm
+
+image/x-pcx
+	ext: pcx
 
 image/x-photo-cd
 	ext: pcd
@@ -516,6 +510,12 @@ image/x-psd
 
 image/x-rgb
 	ext: rgb
+
+image/x-sgi
+	ext: sgi
+
+image/x-sun-raster
+	ext: sun
 
 image/x-tga
 	ext: tga
