@@ -1,3 +1,9 @@
+2002-08-05  Michael Meeks  <michael@ximian.com>
+
+	* gnome-vfs-mime-magic: re-order so check-mime passes.
+
+	* gnome-vfs.keys.in: ditto.
+
 2002-08-04  Bastien Nocera  <hadess@hadess.net>
 
 	* CVS_COMMITS: added
